--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,10 @@ h1 {
     background-color: black;
     margin-right: 1400px;
     border: grey 1px solid;
+    /* float: left;
+	width: 15%;
+    height: 60px;
+    position: static; */
     }
 
 #random-number {
@@ -38,6 +42,9 @@ h1 {
     background-color: black;
     margin-right: 1350px;
     border: grey 1px solid;
+    /* float: left;
+	width: 15%;
+	height: 60px; */
 }
 
 #total-score {
@@ -55,3 +62,4 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
